Aktueller Stand: - useLegacy erstellt. - Parameter aufruf funktioniert jetzt. - Alles von use-guiFX in use-gui verlagert   - poms angepasst   - module-info.java angepasst   - .bat so angepasst wie es vorher war   - Absolute Phade entfernt - Aufruf ausm Terminal funktioniert (.jar call with dependencies)
TODO:
- weitere Funktionalitäten einbauen
- Test ShellIT.java auskommentiert, diesen später irgendwann wieder einbauen